# crud

./: .env  .gitignore  CURL API TESTING.md  Cargo.toml  dev.db  dev.db-shm  dev.db-wal
migrations/: 20251025023052_create_users_table.sql
src/: lib.rs  main.rs
src/db/: mod.rs  pool.rs
src/models/: user.rs
src/routes/: mod.rs  user.rs
